Refactor and expand Obsidian API, remove legacy code
Major refactor introducing new modules for Crucible and Nexo APIs, adding scripting and GUI support, and expanding item/block functionality. Removes legacy and unused classes, including obsolete enchantment and shape-related code. Updates existing modules for improved modularity and maintainability.